--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,4 @@
+# This Dockerfile is for development purposes only
 FROM node:20-alpine
 
 WORKDIR /app
@@ -10,4 +11,4 @@ COPY . .
 
 EXPOSE 5173
 
-CMD ["npm", "dev"]
+CMD ["npm", "dev", "--host"]
