feat(be): implement primitive auth

--- a/backend/.example.env
+++ b/backend/.example.env
@@ -3,3 +3,4 @@ DATABASE_URL=postgresql://admin:admin@localhost:5432/mydatabase
 GITHUB_API_BASE_URL=https://api.github.com
 GITHUB_API_VERSION=2022-11-28
 GITHUB_API_TOKEN=
+JWT_SECRET=
