--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,10 +31,12 @@ services:
       - "3000:3000"
     networks:
       - local_network
-    command: ["node", "dist/main.js"]
+    entrypoint: ./entrypoint.sh
   frontend:
     build: frontend
     container_name: github-crm-frontend
+    environment:
+      VITE_BACKEND_URL: http://localhost:3000
     ports:
       - "5173:5173"
     networks:
